# pedsim_ros

./: .gitignore  .gitmodules  CMakeLists.txt
pedsim/src/: ped_agent.cpp
pedsim_gazebo_plugin/: CMakeLists.txt  package.xml
pedsim_gazebo_plugin/src/: actor_poses_plugin.cpp
pedsim_msgs/: CMakeLists.txt
pedsim_msgs/msg/: AgentState.msg  TrackedGroups.msg  TrackedPerson.msg
pedsim_simulator/: CMakeLists.txt  package.xml  setup.py
pedsim_simulator/config/: PedsimSimulator.cfg  PedsimSimulator.cfg.orig
pedsim_simulator/include/pedsim_simulator/: config.h  simulator.h  transpose.h
pedsim_simulator/include/pedsim_simulator/element/: waypoint.h
pedsim_simulator/launch/: .pedsim.launch.swp  airport_activities.launch  airport_demo.launch  airportdemo.launch  corridor.launch  custom.launch  custom_original.launch  global_planner.launch  own_pedestrians.launch  ped_crossing.launch  ped_walking.launch  pedsim.launch  simple_pedestrians.launch  simulator.launch  training.launch  twoped_crossing.launch  twopedcurved.launch  validation.launch
pedsim_simulator/params/: costmap_common_params.yaml  global_costmap_params.yaml  trajectory_planner.yaml
pedsim_simulator/rviz/: airport.rviz  corridor.rviz  social_contexts_activities.rviz  social_contexts_activities1.rviz
pedsim_simulator/scenarios/: circle_crossing.xml  circle_crossing_adapted.xml  corridor.xml  corridor.xml.orig  corridor_3people.xml  corridor_4people.xml  corridor_6people.xml  corridor_6people_obstacle.xml  corridor_8people.xml  corridor_obstacle.xml  crossing.xml  crossing_2people.xml  crossing_4people.xml  crossing_6people.xml  encounter.xml  multiple_obstacles.xml  obstacle.xml  ped_crossing.xml  ped_walking.xml  scene1.xml  scene2-2.xml  scene2.xml  scene4.xml  scene5.xml  scene6-1.xml  scene6.xml  scene7-1.xml  scene7.xml  scene8.xml  simple_obstacle.xml  social_contexts.xml  square.xml  square_anti_clockwise.xml  square_one_person.xml  square_one_person_anti-clockwise.xml  square_one_person_clockwise.xml  square_small.xml  twoped_crossing.xml  twopedcurved.xml
pedsim_simulator/scenarios/backup/: crossing_6people.xml
pedsim_simulator/scenarios/maps/: corridor.yaml  corridor_obstacle.yaml  corridor_obstacle2.yaml  corridor_small.yaml  empty.yaml  multipath.yaml  multiple_obstacles.yaml  obstacle.yaml  octagon.yaml  square.yaml  square_small.yaml
pedsim_simulator/src/: config.cpp  data_saver.cpp  dataset_saver.cpp  pedsim_data.csv  pedsim_training_15000.000000.csv  pedsim_training_150001.csv  pedsim_training_37501.csv  pedsim_training_37502.csv  pedsim_validation_1500.000000.csv  pedsim_validation_1500.csv  pedsim_validation_15001.csv  pedsim_validation_15002.csv  pedsim_validation_1500_2.csv  scenarioreader.cpp  simulate_diff_drive_robot.cpp  simulator.cpp  transpose.cpp
pedsim_simulator/src/element/: agent.cpp  waypoint.cpp
pedsim_simulator/src/pedsim_hello/: hello.py  pure_pursuit.py  social_lstm  unicycle_model.py
pedsim_utils/src/pedsim_utils/: geometry.cpp
pedsim_visualizer/: CMakeLists.txt  package.xml
pedsim_visualizer/config/: PedsimVisualizer.cfg
pedsim_visualizer/include/pedsim_visualizer/: sim_visualizer.h
pedsim_visualizer/src/: sim_visualizer.cpp
sensors/pedsim_point_clouds/launch/: run_pedsim_clouds.launch
sensors/pedsim_point_clouds/src/: pedsim_point_clouds.cpp
