cmake_minimum_required(VERSION 3.8)
project(pedsim_ros)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        pedsim/include/pedsim/ped_agent.h
        pedsim/include/pedsim/ped_angle.h
        pedsim/include/pedsim/ped_includes.h
        pedsim/include/pedsim/ped_obstacle.h
        pedsim/include/pedsim/ped_scene.h
        pedsim/include/pedsim/ped_tree.h
        pedsim/include/pedsim/ped_vector.h
        pedsim/include/pedsim/ped_waypoint.h
        pedsim/src/ped_agent.cpp
        pedsim/src/ped_angle.cpp
        pedsim/src/ped_obstacle.cpp
        pedsim/src/ped_scene.cpp
        pedsim/src/ped_tree.cpp
        pedsim/src/ped_vector.cpp
        pedsim/src/ped_waypoint.cpp
        pedsim_simulator/include/pedsim_simulator/element/agent.h
        pedsim_simulator/include/pedsim_simulator/element/agentcluster.h
        pedsim_simulator/include/pedsim_simulator/element/agentgroup.h
        pedsim_simulator/include/pedsim_simulator/element/areawaypoint.h
        pedsim_simulator/include/pedsim_simulator/element/attractionarea.h
        pedsim_simulator/include/pedsim_simulator/element/obstacle.h
        pedsim_simulator/include/pedsim_simulator/element/queueingwaypoint.h
        pedsim_simulator/include/pedsim_simulator/element/scenarioelement.h
        pedsim_simulator/include/pedsim_simulator/element/waitingqueue.h
        pedsim_simulator/include/pedsim_simulator/element/waypoint.h
        pedsim_simulator/include/pedsim_simulator/force/alongwallforce.h
        pedsim_simulator/include/pedsim_simulator/force/force.h
        pedsim_simulator/include/pedsim_simulator/force/groupcoherenceforce.h
        pedsim_simulator/include/pedsim_simulator/force/groupgazeforce.h
        pedsim_simulator/include/pedsim_simulator/force/grouprepulsionforce.h
        pedsim_simulator/include/pedsim_simulator/force/randomforce.h
        pedsim_simulator/include/pedsim_simulator/waypointplanner/groupwaypointplanner.h
        pedsim_simulator/include/pedsim_simulator/waypointplanner/individualwaypointplanner.h
        pedsim_simulator/include/pedsim_simulator/waypointplanner/queueingplanner.h
        pedsim_simulator/include/pedsim_simulator/waypointplanner/shoppingplanner.h
        pedsim_simulator/include/pedsim_simulator/waypointplanner/waypointplanner.h
        pedsim_simulator/include/pedsim_simulator/agentstatemachine.h
        pedsim_simulator/include/pedsim_simulator/config.h
        pedsim_simulator/include/pedsim_simulator/orientationhandler.h
        pedsim_simulator/include/pedsim_simulator/rng.h
        pedsim_simulator/include/pedsim_simulator/scenarioreader.h
        pedsim_simulator/include/pedsim_simulator/scene.h
        pedsim_simulator/include/pedsim_simulator/simulator.h
        pedsim_simulator/include/pedsim_simulator/utilities.h
        pedsim_simulator/src/element/agent.cpp
        pedsim_simulator/src/element/agentcluster.cpp
        pedsim_simulator/src/element/agentgroup.cpp
        pedsim_simulator/src/element/areawaypoint.cpp
        pedsim_simulator/src/element/attractionarea.cpp
        pedsim_simulator/src/element/obstacle.cpp
        pedsim_simulator/src/element/queueingwaypoint.cpp
        pedsim_simulator/src/element/scenarioelement.cpp
        pedsim_simulator/src/element/waitingqueue.cpp
        pedsim_simulator/src/element/waypoint.cpp
        pedsim_simulator/src/force/alongwallforce.cpp
        pedsim_simulator/src/force/force.cpp
        pedsim_simulator/src/force/groupcoherenceforce.cpp
        pedsim_simulator/src/force/groupgazeforce.cpp
        pedsim_simulator/src/force/grouprepulsionforce.cpp
        pedsim_simulator/src/force/randomforce.cpp
        pedsim_simulator/src/waypointplanner/groupwaypointplanner.cpp
        pedsim_simulator/src/waypointplanner/individualwaypointplanner.cpp
        pedsim_simulator/src/waypointplanner/queueingplanner.cpp
        pedsim_simulator/src/waypointplanner/shoppingplanner.cpp
        pedsim_simulator/src/waypointplanner/waypointplanner.cpp
        pedsim_simulator/src/agentstatemachine.cpp
        pedsim_simulator/src/config.cpp
        pedsim_simulator/src/orientationhandler.cpp
        pedsim_simulator/src/rng.cpp
        pedsim_simulator/src/scenarioreader.cpp
        pedsim_simulator/src/scene.cpp
        pedsim_simulator/src/simulate_diff_drive_robot.cpp
        pedsim_simulator/src/simulator.cpp
        pedsim_simulator/src/simulator_node.cpp
        sensors/pedsim_point_clouds/src/pedsim_point_clouds.cpp
        visualization/spencer_tracking_rviz_plugin/src/visuals/covariance_visual.h
        visualization/spencer_tracking_rviz_plugin/src/visuals/mesh_node.h
        visualization/spencer_tracking_rviz_plugin/src/visuals/person_visual.cpp
        visualization/spencer_tracking_rviz_plugin/src/visuals/person_visual.h
        visualization/spencer_tracking_rviz_plugin/src/visuals/text_node.h
        visualization/spencer_tracking_rviz_plugin/src/additional_topic_subscriber.cpp
        visualization/spencer_tracking_rviz_plugin/src/additional_topic_subscriber.h
        visualization/spencer_tracking_rviz_plugin/src/detected_persons_display.cpp
        visualization/spencer_tracking_rviz_plugin/src/detected_persons_display.h
        visualization/spencer_tracking_rviz_plugin/src/human_attributes_display.cpp
        visualization/spencer_tracking_rviz_plugin/src/human_attributes_display.h
        visualization/spencer_tracking_rviz_plugin/src/person_display_common.cpp
        visualization/spencer_tracking_rviz_plugin/src/person_display_common.h
        visualization/spencer_tracking_rviz_plugin/src/social_activities_display.cpp
        visualization/spencer_tracking_rviz_plugin/src/social_activities_display.h
        visualization/spencer_tracking_rviz_plugin/src/social_relations_display.cpp
        visualization/spencer_tracking_rviz_plugin/src/social_relations_display.h
        visualization/spencer_tracking_rviz_plugin/src/tracked_groups_display.cpp
        visualization/spencer_tracking_rviz_plugin/src/tracked_groups_display.h
        visualization/spencer_tracking_rviz_plugin/src/tracked_persons_cache.cpp
        visualization/spencer_tracking_rviz_plugin/src/tracked_persons_cache.h
        visualization/spencer_tracking_rviz_plugin/src/tracked_persons_display.cpp
        visualization/spencer_tracking_rviz_plugin/src/tracked_persons_display.h)

add_executable(pedsim_ros ${SOURCE_FILES})